[gd_scene load_steps=102 format=2]

[ext_resource path="res://Main/Misc/canvasadditive.tres" type="Material" id=1]
[ext_resource path="res://Main/SpineSpriteExtension.gd" type="Script" id=2]
[ext_resource path="res://Main/Animations/Character/Character.json" type="SpineSkeletonJsonDataResource" id=3]
[ext_resource path="res://Main/Animations/Character/Character.atlas" type="SpineAtlasResource" id=4]
[ext_resource path="res://Main/Slot/Features/SideCharacters.gd" type="Script" id=5]
[ext_resource path="res://Main/Textures/slot/lightning/lightning6.webp" type="Texture" id=6]
[ext_resource path="res://Main/Textures/slot/lightning/lightning8.webp" type="Texture" id=7]
[ext_resource path="res://Main/Textures/slot/lightning/lightning3.webp" type="Texture" id=8]
[ext_resource path="res://Main/Textures/slot/lightning/lightning5.webp" type="Texture" id=9]
[ext_resource path="res://Main/Textures/slot/lightning/lightning7.webp" type="Texture" id=10]
[ext_resource path="res://Main/Textures/slot/lightning/lightning4.webp" type="Texture" id=11]
[ext_resource path="res://Main/Textures/pose.png" type="Texture" id=12]
[ext_resource path="res://Main/Textures/animated/creaping/22.webp" type="Texture" id=13]
[ext_resource path="res://Main/Textures/animated/creaping/25.webp" type="Texture" id=14]
[ext_resource path="res://Main/Textures/animated/creaping2/11.webp" type="Texture" id=15]
[ext_resource path="res://Main/Textures/animated/creaping/20.webp" type="Texture" id=16]
[ext_resource path="res://Main/Textures/animated/creaping/19.webp" type="Texture" id=17]
[ext_resource path="res://Main/Textures/animated/creaping/15.webp" type="Texture" id=18]
[ext_resource path="res://Main/Textures/animated/creaping/11.webp" type="Texture" id=19]
[ext_resource path="res://Main/Textures/animated/creaping/21.webp" type="Texture" id=20]
[ext_resource path="res://Main/Textures/animated/creaping/10.webp" type="Texture" id=21]
[ext_resource path="res://Main/Textures/animated/creaping2/26.webp" type="Texture" id=22]
[ext_resource path="res://Main/Textures/animated/creaping2/22.webp" type="Texture" id=23]
[ext_resource path="res://Main/Textures/animated/creaping/13.webp" type="Texture" id=24]
[ext_resource path="res://Main/Textures/animated/creaping/14.webp" type="Texture" id=25]
[ext_resource path="res://Main/Textures/animated/creaping2/21.webp" type="Texture" id=26]
[ext_resource path="res://Main/Textures/animated/creaping/26.webp" type="Texture" id=27]
[ext_resource path="res://Main/Textures/animated/creaping2/13.webp" type="Texture" id=28]
[ext_resource path="res://Main/Textures/animated/creaping2/7.webp" type="Texture" id=29]
[ext_resource path="res://Main/Textures/animated/creaping2/14.webp" type="Texture" id=30]
[ext_resource path="res://Main/Textures/animated/creaping/24.webp" type="Texture" id=31]
[ext_resource path="res://Main/Textures/animated/creaping/17.webp" type="Texture" id=32]
[ext_resource path="res://Main/Textures/animated/creaping2/18.webp" type="Texture" id=33]
[ext_resource path="res://Main/Textures/animated/creaping2/17.webp" type="Texture" id=34]
[ext_resource path="res://Main/Textures/animated/creaping2/8.webp" type="Texture" id=35]
[ext_resource path="res://Main/Textures/animated/creaping/8.webp" type="Texture" id=36]
[ext_resource path="res://Main/Textures/animated/creaping2/2.webp" type="Texture" id=37]
[ext_resource path="res://Main/Textures/animated/creaping2/3.webp" type="Texture" id=38]
[ext_resource path="res://Main/Textures/animated/creaping2/20.webp" type="Texture" id=39]
[ext_resource path="res://Main/Textures/animated/creaping2/1.webp" type="Texture" id=40]
[ext_resource path="res://Main/Textures/animated/creaping/23.webp" type="Texture" id=41]
[ext_resource path="res://Main/Textures/animated/creaping2/24.webp" type="Texture" id=42]
[ext_resource path="res://Main/Textures/animated/creaping2/25.webp" type="Texture" id=43]
[ext_resource path="res://Main/Textures/animated/creaping2/19.webp" type="Texture" id=44]
[ext_resource path="res://Main/Textures/animated/creaping2/5.webp" type="Texture" id=45]
[ext_resource path="res://Main/Textures/animated/creaping/12.webp" type="Texture" id=46]
[ext_resource path="res://Main/Textures/animated/creaping2/6.webp" type="Texture" id=47]
[ext_resource path="res://Main/Textures/animated/creaping2/15.webp" type="Texture" id=48]
[ext_resource path="res://Main/Textures/animated/creaping/16.webp" type="Texture" id=49]
[ext_resource path="res://Main/Textures/animated/creaping/9.webp" type="Texture" id=50]
[ext_resource path="res://Main/Textures/animated/creaping2/23.webp" type="Texture" id=51]
[ext_resource path="res://Main/Textures/animated/creaping2/12.webp" type="Texture" id=52]
[ext_resource path="res://Main/Textures/animated/creaping/18.webp" type="Texture" id=53]
[ext_resource path="res://Main/Textures/animated/creaping2/16.webp" type="Texture" id=54]
[ext_resource path="res://Main/Textures/animated/creaping2/27.webp" type="Texture" id=55]
[ext_resource path="res://Main/Textures/animated/creaping2/9.webp" type="Texture" id=56]
[ext_resource path="res://Main/Textures/animated/creaping2/10.webp" type="Texture" id=57]
[ext_resource path="res://Main/Textures/animated/creaping2/4.webp" type="Texture" id=58]
[ext_resource path="res://Main/Textures/animated/creaping/3.webp" type="Texture" id=59]
[ext_resource path="res://Main/Textures/animated/creaping/2.webp" type="Texture" id=60]
[ext_resource path="res://Main/Textures/animated/creaping/4.webp" type="Texture" id=61]
[ext_resource path="res://Main/Textures/animated/creaping/5.webp" type="Texture" id=62]
[ext_resource path="res://Main/Textures/animated/creaping/7.webp" type="Texture" id=63]
[ext_resource path="res://Main/Textures/animated/creaping/6.webp" type="Texture" id=64]
[ext_resource path="res://Main/Textures/animated/creaping/1.webp" type="Texture" id=65]
[ext_resource path="res://Main/Textures/animated/bolt/13.webp" type="Texture" id=66]
[ext_resource path="res://Main/Textures/animated/bolt/19.webp" type="Texture" id=67]
[ext_resource path="res://Main/Textures/animated/bolt/17.webp" type="Texture" id=68]
[ext_resource path="res://Main/Textures/animated/bolt/16.webp" type="Texture" id=69]
[ext_resource path="res://Main/Textures/animated/bolt/5.webp" type="Texture" id=70]
[ext_resource path="res://Main/Textures/animated/bolt/4.webp" type="Texture" id=71]
[ext_resource path="res://Main/Textures/animated/bolt/6.webp" type="Texture" id=72]
[ext_resource path="res://Main/Textures/animated/bolt/2.webp" type="Texture" id=73]
[ext_resource path="res://Main/Textures/animated/bolt/1.webp" type="Texture" id=74]
[ext_resource path="res://Main/Textures/animated/bolt/20.webp" type="Texture" id=75]
[ext_resource path="res://Main/Textures/animated/bolt/3.webp" type="Texture" id=76]
[ext_resource path="res://Main/Textures/animated/bolt/7.webp" type="Texture" id=77]
[ext_resource path="res://Main/Textures/animated/bolt/15.webp" type="Texture" id=78]
[ext_resource path="res://Main/Textures/animated/bolt/8.webp" type="Texture" id=79]
[ext_resource path="res://Main/Textures/animated/bolt/12.webp" type="Texture" id=80]
[ext_resource path="res://Main/Textures/animated/bolt/14.webp" type="Texture" id=81]
[ext_resource path="res://Main/Textures/animated/bolt/10.webp" type="Texture" id=82]
[ext_resource path="res://Main/Textures/animated/bolt/18.webp" type="Texture" id=83]
[ext_resource path="res://Main/Textures/animated/bolt/11.webp" type="Texture" id=84]
[ext_resource path="res://Main/Textures/animated/bolt/9.webp" type="Texture" id=85]

[sub_resource type="SpineSkeletonDataResource" id=430]
atlas_res = ExtResource( 4 )
skeleton_json_res = ExtResource( 3 )
animations = null
skins = null

[sub_resource type="SpineAnimationStateDataResource" id=431]
skeleton = SubResource( 430 )

[sub_resource type="Animation" id=402]
resource_name = "Character Slash"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.23, 0.5 ),
"transitions": PoolRealArray( 0.732043, 0.482968, 1 ),
"update": 0,
"values": [ Vector2( -834, -1 ), Vector2( 353.2, -150 ), Vector2( 650, -1 ) ]
}

[sub_resource type="Animation" id=398]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -834, -1 ) ]
}

[sub_resource type="Animation" id=425]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=426]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=427]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=428]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Lightning3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lightning3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lightning4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lightning4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lightning5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Lightning5:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Lightning6:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Lightning6:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Lightning7:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Lightning7:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Lightning8:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Lightning8:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=429]
resource_name = "Show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Lightning3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lightning3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lightning4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lightning4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lightning5:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Lightning5:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Lightning6:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Lightning6:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Lightning7:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Lightning7:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Lightning8:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Lightning8:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=432]
blend_mode = 1

[sub_resource type="SpriteFrames" id=433]
animations = [ {
"frames": [ ExtResource( 65 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 64 ), ExtResource( 63 ), ExtResource( 36 ), ExtResource( 50 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 46 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 18 ), ExtResource( 49 ), ExtResource( 32 ), ExtResource( 53 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 41 ), ExtResource( 31 ), ExtResource( 14 ), ExtResource( 27 ) ],
"loop": false,
"name": "active",
"speed": 30.0
} ]

[sub_resource type="CanvasItemMaterial" id=434]
blend_mode = 1

[sub_resource type="SpriteFrames" id=435]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 58 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 15 ), ExtResource( 52 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 48 ), ExtResource( 54 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 44 ), ExtResource( 39 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 51 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 22 ), ExtResource( 55 ) ],
"loop": false,
"name": "active",
"speed": 30.0
} ]

[sub_resource type="Animation" id=436]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SwordEffect/effect1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordEffect/effect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=437]
blend_mode = 1

[sub_resource type="SpriteFrames" id=438]
animations = [ {
"frames": [ ExtResource( 74 ), ExtResource( 73 ), ExtResource( 76 ), ExtResource( 71 ), ExtResource( 70 ), ExtResource( 72 ), ExtResource( 77 ), ExtResource( 79 ), ExtResource( 85 ), ExtResource( 82 ), ExtResource( 84 ), ExtResource( 80 ), ExtResource( 66 ), ExtResource( 81 ), ExtResource( 78 ), ExtResource( 69 ), ExtResource( 68 ), ExtResource( 83 ), ExtResource( 67 ), ExtResource( 75 ) ],
"loop": false,
"name": "hit",
"speed": 30.0
} ]

[node name="SideCharacters" type="Node2D"]
z_index = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -777, -147 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 12 )

[node name="Character" type="SpineSprite" parent="."]
position = Vector2( -834, -1 )
animation_state_data_res = SubResource( 431 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
skin = "default"
startanimation = "idle1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Character Slash" = SubResource( 402 )
anims/RESET = SubResource( 398 )

[node name="AnimationPlayerRoot" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 425 )
anims/RESET = SubResource( 426 )
anims/Show = SubResource( 427 )

[node name="Lightning" type="Node2D" parent="."]
position = Vector2( -900, -235 )
scale = Vector2( 2, 2 )
z_index = 2

[node name="Lightning3" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
position = Vector2( 26, 0 )
texture = ExtResource( 8 )

[node name="Lightning4" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
texture = ExtResource( 11 )

[node name="Lightning5" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
position = Vector2( 8, 0 )
texture = ExtResource( 9 )

[node name="Lightning6" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
position = Vector2( -22.5, 0 )
texture = ExtResource( 6 )

[node name="Lightning7" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
texture = ExtResource( 10 )

[node name="Lightning8" type="Sprite" parent="Lightning"]
visible = false
material = ExtResource( 1 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lightning"]
anims/RESET = SubResource( 428 )
anims/Show = SubResource( 429 )

[node name="SwordEffect" type="Node2D" parent="."]

[node name="effect1" type="AnimatedSprite" parent="SwordEffect"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 432 )
position = Vector2( -942, -896 )
rotation = -0.150265
scale = Vector2( 3.77619, 4.16128 )
frames = SubResource( 433 )
animation = "active"

[node name="effect2" type="AnimatedSprite" parent="SwordEffect"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 434 )
position = Vector2( -953, -996 )
rotation = -0.204633
scale = Vector2( 3.82656, 3.79943 )
frames = SubResource( 435 )
animation = "active"
flip_h = true
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="SwordEffect"]
root_node = NodePath("../..")
anims/show = SubResource( 436 )

[node name="LightingBolt" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 437 )
position = Vector2( -785, 364 )
scale = Vector2( 11.6444, 11.6444 )
frames = SubResource( 438 )
animation = "hit"
